package studyGroupF.fields;

import studyGroupF.player.Item;

public class ItemShop extends Field{

    public ItemShop(Item item, String fieldType, int fieldID) {
        super(item, fieldType, fieldID);
    }

    @Override
    void doFunction(Item item) {

    }
}
